# Photo_scanner_model

./: .gitignore  FILTERING_GUIDE.txt  README.md  SEARCH_WORKFLOW_EXPLAINED.txt  check_exif_address.py  check_gps.py  check_img6616.py  db_metadata_view.txt  demo_filtering.py  export_to_mobile.py  inspect_db.py  inspect_model.py  main.py  pyproject.toml  search_config.py  setup_offline.py  test_adaptive_learning.py  test_scoring.py
assets/local_clip_model/: config.json  config_sentence_transformers.json  modules.json  tokenizer_config.json
assets/mobile_model_quantized/: config.json
src/: database.py  duplicate_detector.py  face_detector.py  faiss_index.py  feedback_handler.py  image_analyzer.py  learning_engine.py  metadata_scorer.py  model_handler.py  ocr_handler.py  person_clusterer.py  query_analyzer.py  scanner.py  search_cache.py
